@@ -707,9 +707,10 @@ cm_unnumberedsubsubsec ()
 void
 cm_appendix ()
 {
-  enum_marker = APPENDIX_MAGIC;
   /* Reset top level number so we start from Appendix A */
-  numbers [0] = 0;
+  if (enum_marker != APPENDIX_MAGIC)
+    numbers [0] = 0;
+  enum_marker = APPENDIX_MAGIC;
   sectioning_underscore ("appendix");
 }
 
